# signals-but-a-little-nicer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: async.rs  sync.rs
src/: lib.rs  unix.rs  windows.rs
