[package]
name = "signals-but-a-little-nicer"
description = "A wrapper around signal-handlers for Windows [console applications] and Unix programs."
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = ["rtldg <rtldg@protonmail.com>"]
homepage = "https://github.com/rtldg/signals-but-a-little-nicer"
repository = "https://github.com/rtldg/signals-but-a-little-nicer"
readme = "README.md"
keywords = ["signal", "async"]

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["sync"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-targets = { version = "*" }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
